--- a/file_1.ipynb
+++ b/file_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "62a509fb-2754-4c83-84f9-fd04c1798ddf",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "64c923b2-e302-4a3e-877d-5536f3ffcb84",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "1a00c5af-5bf7-4e4e-ab9c-1fc0da906627",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
        "4                     Mac  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "1afeb910-1ae0-4150-9797-d1449fa05a5a",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "c855cfc0-5af8-4311-aeb0-7e45ac44fd70",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "e708f739-4b05-4d10-aad4-94376c27fe5b",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
        "4      256     Intel                 Mac  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "bfa82796-9273-4218-be81-c14d8370cad3",
    "metadata": {},
    "outputs": [
@@ -423,7 +423,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "14d00db8-e606-403a-9de8-cf59e78f5b1c",
    "metadata": {},
    "outputs": [
@@ -547,7 +547,7 @@
        "max      64.000000    11.100000  324954.720000   352.465147  1024.000000"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "966ad7a4-ef6c-4011-a870-a02be0d2308f",
    "metadata": {},
    "outputs": [
@@ -569,7 +569,7 @@
        "        240,    8])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "720aca06-fc1f-4609-822b-b96ef236141f",
    "metadata": {},
    "outputs": [
@@ -588,7 +588,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_7296\\3181442074.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_2148\\3181442074.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "5f5be7df-3de1-4e9b-aa04-24f3a15edb1d",
    "metadata": {},
    "outputs": [
@@ -613,7 +613,7 @@
        "          8])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "5868cd4c-5ed4-4a80-a57c-87784612ed1c",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
        "(820, 10)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "5ef620a0-cf59-4c67-88bf-043c71ff49c0",
    "metadata": {},
    "outputs": [
@@ -677,17 +677,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "id": "884f3757-6c16-4fea-ad95-f9d58a6d75e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['i5', 'i7', 'i3', 'unknown', 'AMD Processor'], dtype=object)"
+       "array(['Intel Core i5', 'Intel Core i7', 'Intel Core i3',\n",
+       "       'Other Intel Processor', 'AMD Processor'], dtype=object)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "id": "12527aba-395c-494e-b76d-da9508e74dcb",
    "metadata": {},
    "outputs": [
@@ -706,25 +707,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_7296\\305184963.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_2148\\305184963.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_new['Cpu brand']=df_new['Cpu brand'].replace('Intel Core i5','i5')\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_7296\\305184963.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_2148\\305184963.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_new['Cpu brand']=df_new['Cpu brand'].replace('Intel Core i7','i7')\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_7296\\305184963.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_2148\\305184963.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_new['Cpu brand']=df_new['Cpu brand'].replace('Intel Core i3','i3')\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_7296\\305184963.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_2148\\305184963.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -742,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "id": "1a958018-604c-46f2-93d5-c27948daae75",
    "metadata": {},
    "outputs": [
@@ -770,7 +771,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "id": "edb0fd6e-7e32-4266-8be5-a3e3ac88acd6",
    "metadata": {},
    "outputs": [
@@ -811,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 18,
    "id": "6a2934a6-ba3b-4264-8f3c-00a4661e46ed",
    "metadata": {},
    "outputs": [
@@ -819,7 +820,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_7296\\3623862417.py:2: FutureWarning: \n",
+      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_2148\\3623862417.py:2: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -851,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "id": "1d2668cd-1efc-4460-a138-bb79ad493bb6",
    "metadata": {},
    "outputs": [
@@ -873,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "id": "582c1e67-82a3-4adf-8110-64945bc38b4c",
    "metadata": {},
    "outputs": [
@@ -885,7 +886,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 21,
    "id": "43674560-7631-4129-8962-d4b4e7d888d4",
    "metadata": {},
    "outputs": [
@@ -906,7 +907,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -932,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 22,
    "id": "d76dcbdc-fcaa-4543-8f51-f6a87f46a759",
    "metadata": {},
    "outputs": [
@@ -1070,7 +1071,7 @@
        "8        Nvidia             Windows  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 23,
    "id": "db833a13-f9b1-4ace-b492-7bec8e292c8a",
    "metadata": {},
    "outputs": [
@@ -1091,7 +1092,7 @@
        "<Axes: ylabel='Price'>"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1112,17 +1113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 24,
    "id": "af07de62-bb22-46b5-bee4-07018a99e110",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x223431a1fd0>"
+       "<seaborn.axisgrid.PairGrid at 0x229dd87b230>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1143,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 25,
    "id": "57873bb3-afe0-448c-9fb2-66d1b68607e8",
    "metadata": {},
    "outputs": [
@@ -1162,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 26,
    "id": "b589cc01-0910-4744-bb6e-d632cc33c715",
    "metadata": {},
    "outputs": [
@@ -1256,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 27,
    "id": "0ddd1e55-4aac-4652-bf36-9158f99d9bbb",
    "metadata": {},
    "outputs": [
@@ -1285,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 28,
    "id": "8daae4be-8199-4d7d-af86-928e858dfb6d",
    "metadata": {},
    "outputs": [],
@@ -1295,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 29,
    "id": "2c0861c3-3aeb-42e8-8787-0cdfbac10881",
    "metadata": {},
    "outputs": [
@@ -1433,7 +1434,7 @@
        "203          i7  512    Nvidia             Windows  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1444,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 30,
    "id": "cbd92e4b-4a39-4ad4-ba97-c47b17bbfa7a",
    "metadata": {},
    "outputs": [
@@ -1471,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 31,
    "id": "b268c659-4563-4358-82e1-59186c825604",
    "metadata": {},
    "outputs": [
@@ -1481,7 +1482,7 @@
        "<Axes: ylabel='Price'>"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1502,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 32,
    "id": "b4535f2a-013c-4f62-b8c9-98d905ad33d1",
    "metadata": {},
    "outputs": [
@@ -1512,7 +1513,7 @@
        "<Signature (data=None, *, x=None, y=None, hue=None, size=None, style=None, palette=None, hue_order=None, hue_norm=None, sizes=None, size_order=None, size_norm=None, markers=True, style_order=None, legend='auto', ax=None, **kwargs)>"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1523,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 33,
    "id": "0c762c07-a7a4-4711-8dc9-fc6722e680c6",
    "metadata": {},
    "outputs": [
@@ -4318,8 +4319,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "9d4c58bb-101b-4cc1-ae74-49be44ec08e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 1268 entries, 0 to 1302\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   Company        1268 non-null   object \n",
+      " 1   TypeName       1268 non-null   object \n",
+      " 2   Ram            1268 non-null   int64  \n",
+      " 3   Weight         1268 non-null   float64\n",
+      " 4   Price          1268 non-null   float64\n",
+      " 5   Touchscreen    1268 non-null   int64  \n",
+      " 6   Ips            1268 non-null   int64  \n",
+      " 7   ppi            1268 non-null   float64\n",
+      " 8   Cpu brand      1268 non-null   object \n",
+      " 9   HDD            1268 non-null   int64  \n",
+      " 10  SSD            1268 non-null   int64  \n",
+      " 11  Hybrid         1268 non-null   int64  \n",
+      " 12  Flash_Storage  1268 non-null   int64  \n",
+      " 13  Gpu brand      1268 non-null   object \n",
+      " 14  os             1268 non-null   object \n",
+      "dtypes: float64(3), int64(7), object(5)\n",
+      "memory usage: 190.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cae2bee-3592-44fd-93e4-fc2c8f30e6e4",
    "metadata": {},
    "outputs": [],
    "source": []
