--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -165,8 +165,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "241fecab-6692-41da-8127-ae1cb65a077f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>New_cases</th>\n",
+       "      <th>Cumulative_cases</th>\n",
+       "      <th>New_deaths</th>\n",
+       "      <th>Cumulative_deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1190.000000</td>\n",
+       "      <td>1.190000e+03</td>\n",
+       "      <td>1190.000000</td>\n",
+       "      <td>1190.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1327.574790</td>\n",
+       "      <td>9.421865e+05</td>\n",
+       "      <td>25.755462</td>\n",
+       "      <td>19406.142857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1631.511306</td>\n",
+       "      <td>5.892211e+05</td>\n",
+       "      <td>34.822025</td>\n",
+       "      <td>11761.570123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>80.250000</td>\n",
+       "      <td>3.280718e+05</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6736.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>621.000000</td>\n",
+       "      <td>1.111460e+06</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>24676.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2082.750000</td>\n",
+       "      <td>1.531162e+06</td>\n",
+       "      <td>42.000000</td>\n",
+       "      <td>30381.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>8183.000000</td>\n",
+       "      <td>1.579814e+06</td>\n",
+       "      <td>313.000000</td>\n",
+       "      <td>30649.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         New_cases  Cumulative_cases   New_deaths  Cumulative_deaths\n",
+       "count  1190.000000      1.190000e+03  1190.000000        1190.000000\n",
+       "mean   1327.574790      9.421865e+05    25.755462       19406.142857\n",
+       "std    1631.511306      5.892211e+05    34.822025       11761.570123\n",
+       "min       0.000000      0.000000e+00     0.000000           0.000000\n",
+       "25%      80.250000      3.280718e+05     0.000000        6736.750000\n",
+       "50%     621.000000      1.111460e+06     8.000000       24676.000000\n",
+       "75%    2082.750000      1.531162e+06    42.000000       30381.000000\n",
+       "max    8183.000000      1.579814e+06   313.000000       30649.000000"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ea513f8d-e439-470f-b2a4-a655333d3a91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date_reported</th>\n",
+       "      <th>Country_code</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>WHO_region</th>\n",
+       "      <th>New_cases</th>\n",
+       "      <th>Cumulative_cases</th>\n",
+       "      <th>New_deaths</th>\n",
+       "      <th>Cumulative_deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>601</th>\n",
+       "      <td>2021-08-26</td>\n",
+       "      <td>PK</td>\n",
+       "      <td>Pakistan</td>\n",
+       "      <td>EMRO</td>\n",
+       "      <td>4199</td>\n",
+       "      <td>1135858</td>\n",
+       "      <td>141</td>\n",
+       "      <td>25235</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>535</th>\n",
+       "      <td>2021-06-21</td>\n",
+       "      <td>PK</td>\n",
+       "      <td>Pakistan</td>\n",
+       "      <td>EMRO</td>\n",
+       "      <td>1050</td>\n",
+       "      <td>948268</td>\n",
+       "      <td>37</td>\n",
+       "      <td>21977</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>988</th>\n",
+       "      <td>2022-09-17</td>\n",
+       "      <td>PK</td>\n",
+       "      <td>Pakistan</td>\n",
+       "      <td>EMRO</td>\n",
+       "      <td>98</td>\n",
+       "      <td>1571628</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>843</th>\n",
+       "      <td>2022-04-25</td>\n",
+       "      <td>PK</td>\n",
+       "      <td>Pakistan</td>\n",
+       "      <td>EMRO</td>\n",
+       "      <td>105</td>\n",
+       "      <td>1527856</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>355</th>\n",
+       "      <td>2020-12-23</td>\n",
+       "      <td>PK</td>\n",
+       "      <td>Pakistan</td>\n",
+       "      <td>EMRO</td>\n",
+       "      <td>1704</td>\n",
+       "      <td>460672</td>\n",
+       "      <td>82</td>\n",
+       "      <td>9474</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Date_reported Country_code   Country WHO_region  New_cases  \\\n",
+       "601    2021-08-26           PK  Pakistan       EMRO       4199   \n",
+       "535    2021-06-21           PK  Pakistan       EMRO       1050   \n",
+       "988    2022-09-17           PK  Pakistan       EMRO         98   \n",
+       "843    2022-04-25           PK  Pakistan       EMRO        105   \n",
+       "355    2020-12-23           PK  Pakistan       EMRO       1704   \n",
+       "\n",
+       "     Cumulative_cases  New_deaths  Cumulative_deaths  \n",
+       "601           1135858         141              25235  \n",
+       "535            948268          37              21977  \n",
+       "988           1571628           0              30604  \n",
+       "843           1527856           0              30369  \n",
+       "355            460672          82               9474  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7695867b-21ba-422d-8341-8d4ac928b921",
    "metadata": {},
    "outputs": [],
    "source": []
